--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,11 @@ trigger:
 pool:
   vmImage: 'windows-latest'
 
+  jobs:
+  - job: ParallelTesting
+    strategy:
+      parallel: 2
+
 variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
