Added references to GlobalSuppressions in all .csproj files

--- a/SecretSanta/src/SecretSanta.ApiTests/SecretSanta.ApiTests.csproj
+++ b/SecretSanta/src/SecretSanta.ApiTests/SecretSanta.ApiTests.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\SecretSanta.Api\SecretSanta.Api.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="..\..\GlobalSuppressions.cs" Link="GlobalSuppressions.cs" />
+  </ItemGroup>
+
 </Project>
