--- a/SecretSanta/src/SecretSanta.Business/SecretSanta.Business.csproj
+++ b/SecretSanta/src/SecretSanta.Business/SecretSanta.Business.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\SecretSanta.Data\SecretSanta.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="..\..\GlobalSuppressions.cs" Link="GlobalSuppressions.cs" />
+  </ItemGroup>
+
 </Project>
