--- a/SecretSanta/src/SecretSanta.BusinessTests/SecretSanta.BusinessTests.csproj
+++ b/SecretSanta/src/SecretSanta.BusinessTests/SecretSanta.BusinessTests.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\SecretSanta.Business\SecretSanta.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="..\..\GlobalSuppressions.cs" Link="GlobalSuppressions.cs" />
+  </ItemGroup>
+
 </Project>
