--- a/SecretSanta/src/SecretSanta.Api/SecretSanta.Api.csproj
+++ b/SecretSanta/src/SecretSanta.Api/SecretSanta.Api.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="sqlite" Version="3.13.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SecretSanta.Business\SecretSanta.Business.csproj" />
   </ItemGroup>
 
