--- a/SecretSanta/src/SecretSanta.Business/SecretSanta.Business.csproj
+++ b/SecretSanta/src/SecretSanta.Business/SecretSanta.Business.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="sqlite" Version="3.13.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SecretSanta.Data\SecretSanta.Data.csproj" />
   </ItemGroup>
 
