--- a/SecretSanta/src/SecretSanta.Data/SecretSanta.Data.csproj
+++ b/SecretSanta/src/SecretSanta.Data/SecretSanta.Data.csproj
@@ -9,6 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
+    <PackageReference Include="sqlite" Version="3.13.0" />
   </ItemGroup>
 </Project>
