--- a/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
+++ b/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
@@ -7,4 +7,8 @@
   <ItemGroup>
     <Compile Include="..\..\GlobalSuppression.cs" Link="GlobalSuppression.cs" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="sqlite" Version="3.13.0" />
+  </ItemGroup>
 </Project>
