--- a/SecretSanta/test/SecretSanta.Api.Tests/SecretSanta.Api.Tests.csproj
+++ b/SecretSanta/test/SecretSanta.Api.Tests/SecretSanta.Api.Tests.csproj
@@ -18,6 +18,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="sqlite" Version="3.13.0" />
   </ItemGroup>
 
   <ItemGroup>
