Made progress after deleting database files

--- a/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
+++ b/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="scripts\list-Gifts.ts" />
     <None Remove="scripts\main.ts" />
+    <None Remove="scripts\secretsanta-client.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -14,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="scripts\list-Gifts.ts" />
+    <TypeScriptCompile Include="scripts\secretsanta-client.ts" />
     <TypeScriptCompile Include="scripts\main.ts" />
   </ItemGroup>
 
