--- a/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
+++ b/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="scripts\list-Gifts.spec.ts" />
     <None Remove="scripts\list-Gifts.ts" />
     <None Remove="scripts\main.ts" />
     <None Remove="scripts\secretsanta-client.ts" />
@@ -16,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="scripts\list-Gifts.spec.ts" />
     <TypeScriptCompile Include="scripts\list-Gifts.ts" />
     <TypeScriptCompile Include="scripts\secretsanta-client.ts" />
     <TypeScriptCompile Include="scripts\main.ts" />
