Started work on assignment 9

--- a/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
+++ b/SecretSanta/src/SecretSanta.Web/SecretSanta.Web.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="TagHelperPack" Version="0.5.0-pre-20191217.4" />
   </ItemGroup>
 
@@ -20,5 +21,9 @@
     <TypeScriptCompile Include="scripts\secretsanta-client.ts" />
     <TypeScriptCompile Include="scripts\vue-shim.d.ts" />
   </ItemGroup>
+
+  <Target Condition="!Exists('Views\Shared\_Layout.cshtml')" Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec WorkingDirectory="$(MSBuildProjectDirectory)" Command="npm run build:prod" />
+  </Target>
 
 </Project>
