--- a/SecretSanta/test/SecretSanta.Business.Tests/SecretSanta.Business.Tests 2.csproj
+++ b/SecretSanta/test/SecretSanta.Business.Tests/SecretSanta.Business.Tests 2.csproj
@@ -11,13 +11,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="80.0.3987.10600" />
-    <PackageReference Include="Selenium.WebDriver.IEDriver" Version="3.150.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\SecretSanta.Web\SecretSanta.Web.csproj" />
+    <ProjectReference Include="..\..\src\SecretSanta.Business\SecretSanta.Business.csproj" />
+    <ProjectReference Include="..\SecretSanta.Data.Tests\SecretSanta.Data.Tests.csproj" />
   </ItemGroup>
 
 </Project>
