--- a/SecretSanta/test/SecretSanta.Web.Tests/SecretSanta.Web.Tests 2.csproj
+++ b/SecretSanta/test/SecretSanta.Web.Tests/SecretSanta.Web.Tests 2.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="80.0.3987.10600" />
     <PackageReference Include="Selenium.WebDriver.IEDriver" Version="3.150.1" />
