--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,18 @@ steps:
   inputs:
     command: 'test'
     projects: '**/*Tests.csproj'
+    
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    publishWebProjects: false
+    projects: |
+      **/SecretSanta.Api.csproj
+      **/SecretSanta.Web.csproj
+    arguments: '--configuration $(BuildConfiguration) --output "$(build.artifactstagingdirectory)"'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
